# pokemon-data-scraper

./: .gitignore  Cargo.toml  poke-db.sqlite  pokemon_data.csv
.github/workflows/: rust.yml
src/: get_all_machines.rs  get_all_moves.rs  get_move_data_functions.rs  get_pokemon_data_functions.rs  main.rs  make_basic_json.rs  pokemon_data.rs  store_and_print.rs
