[package]
name = "pokemon-data-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rustemon = "3.4.0" 
serde_json = "1.0.117"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
